testsuite/gna/bug0139/repro3.ref
repro3.vhdl:18:9:error: duplicate choice for 0
      a (0) => v1 (0),
        ^
